cabal-version: >=1.10
name:          wallet
version:       0
build-type:    Simple

executable wallet
  -- global
  build-depends:
      base
    , containers
    , directory
    , filepath
    , http-client-tls
    , mtl
    , named
    , optparse-applicative
    , persistent
    , persistent-sqlite
    , servant-client
    , stellar-sdk
    , text

  -- project
  build-depends:      stellar-horizon
  default-language:   Haskell2010
  default-extensions:
    BlockArguments
    ImportQualifiedPost
    StrictData
    TypeApplications

  main-is:            Main.hs
  other-modules:
    Accounts
    Options
